--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.2",
+    "angular-in-memory-web-api": "^0.5.4",
+    "angular2-multiselect-dropdown": "^2.7.0",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "jquery": "^1.9.1",
+    "ng-multiselect-dropdown": "^0.1.5",
+    "ngx-file-drop": "^2.0.5",
+    "popper": "^1.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
